fix vue warning wrap issues

--- a/app/javascript/src/styles/specific/post_replacements.scss
+++ b/app/javascript/src/styles/specific/post_replacements.scss
@@ -44,6 +44,8 @@ div#c-post-replacements {
     margin-bottom: 0.5rem;
     font-weight: bold;
     width: fit-content;
+    white-space: pre-wrap;
+
   }
 
   #avoid-posting-notice ul {
